--- a/hole-punching/libp2p/protocols/pubsub/gossipsub/behavior.html
+++ b/hole-punching/libp2p/protocols/pubsub/gossipsub/behavior.html
@@ -444,7 +444,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="rebalanceMesh,GossipSub,string,ptr.MeshMetrics" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#rebalanceMesh%2CGossipSub%2Cstring%2Cptr.MeshMetrics"><span class="Identifier">rebalanceMesh</span></a><span class="Other">(</span><span class="Identifier">g</span><span class="Other">:</span> <a href="types.html#GossipSub"><span class="Identifier">GossipSub</span></a><span class="Other">;</span> <span class="Identifier">topic</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">metrics</span><span class="Other">:</span> <span class="Keyword">ptr</span> <a href="types.html#MeshMetrics"><span class="Identifier">MeshMetrics</span></a> <span class="Other">=</span> <span class="Keyword">nil</span><span class="Other">)</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -478,7 +478,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-16 15:47:18 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-18 15:34:38 UTC</small>
       </div>
     </div>
   </div>
