--- a/fixautonatservice/libp2p/connmanager.html
+++ b/fixautonatservice/libp2p/connmanager.html
@@ -333,11 +333,6 @@ window.addEventListener("DOMContentLoaded", main2);
     title="getStream(c: ConnManager; peerId: PeerId; dir: Direction): Future[Connection]">getStream(c: ConnManager; peerId: PeerId; dir: Direction): Future[Connection]</a></li>
 
   </ul>
-  <ul class="simple nested-toc-section">incomingSlotsAvailable
-      <li><a class="reference" href="#incomingSlotsAvailable%2CConnManager"
-    title="incomingSlotsAvailable(c: ConnManager): int">incomingSlotsAvailable(c: ConnManager): int</a></li>
-
-  </ul>
   <ul class="simple nested-toc-section">new
       <li><a class="reference" href="#new%2CtypeConnManager%2Cint%2Cint"
     title="new(C: type ConnManager; maxConnsPerPeer = MaxConnectionsPerPeer;
@@ -374,6 +369,11 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple nested-toc-section">selectMuxer
       <li><a class="reference" href="#selectMuxer%2CConnManager%2CConnection"
     title="selectMuxer(c: ConnManager; conn: Connection): Muxer">selectMuxer(c: ConnManager; conn: Connection): Muxer</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">slotsAvailable
+      <li><a class="reference" href="#slotsAvailable%2CConnManager%2CDirection"
+    title="slotsAvailable(c: ConnManager; dir: Direction): int">slotsAvailable(c: ConnManager; dir: Direction): int</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">storeConn
@@ -633,9 +633,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 cleanup resources for the connection manager 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L549"
+href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L553"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L549" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L553" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -707,9 +707,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 drop connections and cleanup resources for peer 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L525"
+href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L529"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L525" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L529" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -759,9 +759,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 get a muxed stream for the passed connection 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L517"
+href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L521"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L517" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L521" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -772,9 +772,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 get a muxed stream for the passed peer from any connection 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L508"
+href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L512"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L508" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L512" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -786,21 +786,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 get a muxed stream for the provided peer with the given direction 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L498"
+href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L502"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L498" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="incomingSlotsAvailable,ConnManager" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#incomingSlotsAvailable%2CConnManager"><span class="Identifier">incomingSlotsAvailable</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L447"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L447" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L502" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -824,9 +812,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L450"
+href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L454"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L450" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L454" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -897,6 +885,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="slotsAvailable,ConnManager,Direction" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#slotsAvailable%2CConnManager%2CDirection"><span class="Identifier">slotsAvailable</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L447"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L447" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="storeConn,ConnManager,Connection" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#storeConn%2CConnManager%2CConnection"><span class="Identifier">storeConn</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">,</span> <a href="errors.html#LPError"><span class="Identifier">LPError</span></a><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
@@ -917,9 +917,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 store the connection and muxer 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L471"
+href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L475"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L471" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L475" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -930,9 +930,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L456"
+href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L460"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L456" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L460" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -974,7 +974,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-24 11:02:59 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-24 11:45:12 UTC</small>
       </div>
     </div>
   </div>
