--- a/forceNewConnection/libp2p/switch.html
+++ b/forceNewConnection/libp2p/switch.html
@@ -317,8 +317,8 @@ window.addEventListener("DOMContentLoaded", main2);
     PeerId]</a></li>
   <li><a class="reference" href="#connect.e%2CSwitch%2CPeerId%2Cseq%5BMultiAddress%5D"
     title="connect(s: Switch; peerId: PeerId; addrs: seq[MultiAddress]; forceDial = false;
-        forceNewConnection = false): Future[void]">connect(s: Switch; peerId: PeerId; addrs: seq[MultiAddress]; forceDial = false;
-        forceNewConnection = false): Future[void]</a></li>
+        reuseConnection = true): Future[void]">connect(s: Switch; peerId: PeerId; addrs: seq[MultiAddress]; forceDial = false;
+        reuseConnection = true): Future[void]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">dial
@@ -636,7 +636,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="connect.e,Switch,PeerId,seq[MultiAddress]" class="tohide">
 <dt><pre><span class="Keyword">method</span> <a href="#connect.e%2CSwitch%2CPeerId%2Cseq%5BMultiAddress%5D"><span class="Identifier">connect</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="transports/transport.html#Switch"><span class="Identifier">Switch</span></a><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">;</span> <span class="Identifier">addrs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span>
-               <span class="Identifier">forceDial</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">;</span> <span class="Identifier">forceNewConnection</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.
+               <span class="Identifier">forceDial</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">;</span> <span class="Identifier">reuseConnection</span> <span class="Other">=</span> <span class="Identifier">true</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.
     <span class="Identifier">public</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
@@ -729,7 +729,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-24 11:04:30 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-24 12:28:19 UTC</small>
       </div>
     </div>
   </div>
